
  ChangeLog for the eggleton-tools repository.  
  Please log (major) changes here (and add a short comment using svn commit -m 'Comment').
     
     1: AstroFloyd, 16/01/2009
     Initial import of eggleton tools
     